--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
     <head>
-
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Hello</h1>
+        <div class="content">
+            <h1>Hello</h1>
+        </div>
     </body>
 </html>
